<android.support.constraint.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.0"
        tools:context="org.codeforiraq.pharmacylocation.MapsActivity" />

    <View
        android:id="@+id/viewok"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colortext2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView

        android:id="@+id/imageok"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnstyle"
        app:layout_constraintBottom_toBottomOf="@+id/viewok"
        app:layout_constraintLeft_toLeftOf="@+id/viewok"
        app:layout_constraintRight_toRightOf="@+id/viewok"
        app:layout_constraintTop_toTopOf="@+id/viewok"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/ok"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnstyle2"
        android:onClick="ok"
        android:text="@string/ok"
        android:textColor="@color/colorw"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageok"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/textViewok"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="top|center"
        android:text="@string/Tutorial"
        android:textColor="@color/colorw"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ok"
        app:layout_constraintLeft_toLeftOf="@+id/imageok"
        app:layout_constraintRight_toRightOf="@+id/imageok"
        app:layout_constraintTop_toTopOf="@+id/imageok"
        app:layout_constraintVertical_bias="0.581"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:textColor="@color/colorw"
        android:textSize="22sp"

        android:id="@+id/textViewhave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/havepharmacy"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textViewok"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewok"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewok"
        app:layout_constraintTop_toTopOf="@+id/imageok"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.504" />

</android.support.constraint.ConstraintLayout>


